objects/CPQHPQuoteWithBMIQuoteMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This Object is used to store the mapping of BMI Quote With HP Quote Custom Object.</description>
    <fields>
        <fullName>BMI_API_Name__c</fullName>
        <description>Field contain the BMI Field API Name</description>
        <inlineHelpText>Enter BMI Field API Name</inlineHelpText>
        <label>BMI API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_Quote_API_Name__c</fullName>
        <description>Field contain the BMI Field API Name</description>
        <inlineHelpText>Enter BMI Field API Name</inlineHelpText>
        <label>HP Quote API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>Contain object type either Quote or Quote Line Item</description>
        <inlineHelpText>Quote or Quote Line Item</inlineHelpText>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQHPQuoteWithBMIQuoteMapping</label>
</CustomObject>